test/invalid-syntax/fc51601_invalid_record/invalid_record.mag
--- Author: fc51601, José Sousa

const p : {x: Int} = {x: 1}
fun main(_) : Unit -> Unit = print(p.x)